# Vol-Regime-lab

./: .gitignore  .pre-commit-config.yaml  CAPABILITIES_SUMMARY.md  Dockerfile  HOW_TO_GAUGE_PREDICTIONS.md  LICENSE  MODEL_FINDINGS_SUMMARY.md  Makefile  QUICK_FINDINGS.txt  QUICK_START.md  README.md  REGIME_COMPARISON.md  demo.py  demo_auto.py  pyproject.toml  run_backtest.py  run_strategy.py
configs/: hmm_spx_studentt.yaml  hmm_spx_studentt_rw50.yaml  hmm_spx_studentt_stable.yaml  hmm_spx_studentt_stable_v2.yaml
demo_output/: diagnostics.json  features.csv  predictions.csv  summary.json  trained_model.pkl
docs/: architecture.md
reports/evaluation/: evaluation_results.json
scripts/: evaluate_predictions.py  plot_regimes.py  quick_evaluate.py  smooth_regimes.py  train_hmm.py
src/regime_lab/: __init__.py
src/regime_lab/backtest/: __init__.py  garch_benchmark.py  strategy.py  walk_forward.py
src/regime_lab/data/: __init__.py  features.py  loader.py
src/regime_lab/eval/: __init__.py  diagnostics.py
src/regime_lab/models/: __init__.py  garch.py  hmm_studentt.py
src/regime_lab/plotting/: __init__.py  regimes.py
src/regime_lab/strategies/: __init__.py  trading_strategies.py
src/regime_lab/utils/: __init__.py  config.py  io.py
tests/: test_features.py  test_hmm_math.py  test_loader.py
